<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ping</string>
    <string name="action_settings">Settings</string>
    <string name="new_user">NEW</string>
    <string name="login">LOG IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ping_create">PING</string>
    <string name="ping_submit">SUBMIT</string>
    <string name="ping_hint">What\'s up?</string>
    <string name="shared_pref">Pref</string>
    <string name="ping_return">RETURN</string>
    <string name="ping_plus">+</string>
    <string name="ping_minus">-</string>
    <string name="sixteenth_letter_of_the_alphabet_uppercase_for_internationalization_purposes">P</string>
    <string name="search_hint">Search by tag</string>

</resources>
