<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow"
    tools:context=".LoginActivity" >
    
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/login_panel" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:gravity="center"
	        android:text="@string/app_name"
	        android:textSize="52sp" />
        
    </FrameLayout>
        

    <FrameLayout
        android:id="@+id/login_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/black" >
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	        android:layout_marginBottom="1dp"
	        android:layout_marginLeft="1dp"
	        android:layout_marginRight="1dp"
	        android:background="@color/light_gray"
	        android:orientation="vertical">
		    
		    <EditText
		        android:id="@+id/username"
		        android:layout_width="fill_parent"
		        android:layout_height="30sp"
		        android:layout_weight="1"
		        android:background="@android:color/transparent"
		        android:inputType="textPersonName|textNoSuggestions"
		        android:hint="@string/username" >
		
		        <requestFocus />
		    </EditText>
		
		    <EditText
		        android:id="@+id/password"
		        android:layout_width="fill_parent"
		        android:layout_height="30sp"
		        android:layout_weight="1"
		        android:background="@android:color/transparent"
		        android:inputType="textPassword"
		        android:hint="@string/password" />
	    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@android:color/black"
		        android:orientation="horizontal" >
		        
				<Button
				    android:id="@+id/new_user"
				    android:background="@color/light_blue"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:text="@string/new_user"
				    android:textColor="@color/light_gray"
				    android:textSize="36sp"
				    android:layout_marginTop="1dp"
				    android:layout_marginRight="1dp" />
		        <Button
				    android:id="@+id/login"
				    android:background="@color/light_blue"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:text="@string/login"
				    android:textColor="@color/light_gray"
				    android:textSize="36sp"
				    android:layout_marginTop="1dp" />
				
			</LinearLayout>
		</LinearLayout>
	</FrameLayout>
</RelativeLayout>
