<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow" >
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="80sp"
        android:textColor="@color/light_blue"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:includeFontPadding="false" />
        
    <RelativeLayout
        android:id="@+id/login_panel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title" >
	    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/black"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="1dp"
		        android:background="@color/light_gray"
		        android:orientation="vertical">
			    
			    <EditText
			        android:id="@+id/username"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_margin="16sp"
			        android:background="@android:color/transparent"
			        android:inputType="textNoSuggestions|textVisiblePassword"
			        android:imeOptions="actionNext"
			        android:hint="@string/username" >
			
			        <requestFocus />
			    </EditText>
			
			    <EditText
			        android:id="@+id/password"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_margin="16sp"
			        android:background="@android:color/transparent"
			        android:inputType="textPassword"
			        android:imeOptions="actionSend"
			        android:hint="@string/password" />
			</LinearLayout>
	    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="1sp"
		        android:layout_marginRight="1sp"
		        android:layout_marginBottom="1sp"
		        android:background="@android:color/black"
		        android:orientation="horizontal" >
		        
				<Button style="@style/BlueButton"
				    android:id="@+id/new_user"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="1sp"
				    android:text="@string/new_user" />
		        <Button style="@style/BlueButton"
				    android:id="@+id/login"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
				    android:text="@string/login" />
				
			</LinearLayout>
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>
