<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow" >
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_centerInParent="true"
        android:padding="1dp"
        android:background="@android:color/black"
        android:orientation="vertical" >
	    
	    <EditText
	        android:id="@+id/message"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:background="@color/light_gray"
	        android:hint="@string/ping_hint"
	        android:inputType="textMultiLine"
	        android:imeOptions="actionSend"
	        android:padding="16dp"
	        android:layout_weight="1"
	        android:gravity="top|left" >
	
	        <requestFocus />
	    </EditText>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@android:color/black"
	        android:orientation="horizontal" >
	        
			<ImageButton style="@style/BlueButton"
	            android:id="@+id/camera"
	            android:layout_width="0dip"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:layout_marginTop="1dp"
	            android:layout_marginRight="1dp"
	            android:contentDescription="@string/app_name"
	            android:scaleType="fitCenter"
	            android:src="@drawable/ic_action_camera" />
	        <Button style="@style/BlueButton"
			    android:id="@+id/submit"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
			    android:layout_marginTop="1dp"
			    android:text="@string/ping_submit" />
			
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
